# International_Student_Assistant_Chatbot

./: .gitattributes  .gitignore  =3  README.md  app.py  environment.yml  logs.txt  pyproject.toml
data/chunks/: chunks.json
data/discovery/: discovery.json
data/eval/: queries.json  summaries.json
data/indices/: bm25_index.pkl  faiss.index
data/parsed/: parsed_docs.json
data/processed/: cleaned_data.csv  embedding_corpus.csv  structured_text.csv
data/raw/: studyinthestates.dhs.gov__students__66a5928b.html  studyinthestates.dhs.gov__students_bringing-dependents-to-the-united-states__2ad5e681.html  studyinthestates.dhs.gov__students_change-of-status__8410705a.html  studyinthestates.dhs.gov__students_complete_change-of-status__1aeeb467.html  studyinthestates.dhs.gov__students_driving-united-states__e295f6b9.html  studyinthestates.dhs.gov__students_exchange-visitors__358cb40c.html  studyinthestates.dhs.gov__students_financial-ability__ecac2bc3.html  studyinthestates.dhs.gov__students_form-i-515a-overview__6f302b25.html  studyinthestates.dhs.gov__students_full-course-of-study__212713ce.html  studyinthestates.dhs.gov__students_get-started_bringing-dependents-to-the-united-states__97b98b76.html  studyinthestates.dhs.gov__students_get-started_english-language-training__71d19466.html  studyinthestates.dhs.gov__students_get-started_exchange-visitors__13cfae76.html  studyinthestates.dhs.gov__students_get-started_kindergarten-to-grade-12-students__9ab983b4.html  studyinthestates.dhs.gov__students_get-started_what-is-a-commission-based-recruiter__38b23e13.html  studyinthestates.dhs.gov__students_getting-a-visa__7389be75.html  studyinthestates.dhs.gov__students_getting-to-the-united-states__2953ce2c.html  studyinthestates.dhs.gov__students_h-1b-status-and-the-cap-gap-extension__ece59c84.html  studyinthestates.dhs.gov__students_i-901-sevis-fee-payment-video__eec917ac.html  studyinthestates.dhs.gov__students_individual-taxpayer-identification-number-itin__e71fad68.html  studyinthestates.dhs.gov__students_instructions-for-transferring-to-another-school-as-an-f-1-student__545fc07a.html  studyinthestates.dhs.gov__students_instructions-for-transferring-to-another-school-as-an-m-1-student__34097705.html  studyinthestates.dhs.gov__students_international-student-life-cycle__a8ef11bb.html  studyinthestates.dhs.gov__students_kindergarten-to-grade-12-students__40a364f8.html  studyinthestates.dhs.gov__students_m-1-extensions-of-stay__deceb52f.html  studyinthestates.dhs.gov__students_maintain-your-status__e6683f25.html  studyinthestates.dhs.gov__students_maintaining-status__5efe1e8e.html  studyinthestates.dhs.gov__students_paying-i-901-sevis-fee__0151fee5.html  (+29 more)
image/: GU.avif
information_retreival/: build_dense_index.py  dense_retrieval.py  eval.py  hybrid_retrieval.py  information_retrieval.py
rag_chatbot/: __init__.py  web.py
scripts/: build_index.py  crawl_site.py  evaluate.py  run_demo.py
summerizer/: __init__.py  build_dense_index.py
tests/: __init__.py  test_answer.py  test_build_dense_index.py  test_chunker.py  test_cleaning.py  test_crawling.py  test_index.py  test_logger.py  test_parser.py  test_retriever.py  test_search.py  test_utils.py
utils/: html_parser.py  text_cleaning.py
(+57 files in other folders)
