[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "international-students-assistant"
version = "0.1.0"
description = "International Student Immigration Assistant: a hybrid BM25 + dense retrieval RAG system over Study in the States data, covering K-12 through post-graduation employment."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "DSAN5400 Team" },
]
keywords = ["information-retrieval", "bm25", "rag", "immigration", "international-students", "study-in-the-states", "k-12", "visa", "opt", "cpt"]

dependencies = [
    "click>=8.1",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "pandas>=2.3.3",
    "lxml>=6.1.0",
    "flask>=3.1.3",
    "nltk>=3.9",
    "faiss-cpu>=1.13.2",
    "sentence-transformers>=5.4.1",
    "rouge-score>=0.1.2",
    "bert-score>=0.3.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]

[project.scripts]
isa = "international_student_assistant.cli:main"

[project.urls]
Homepage = "https://github.com/GU-DSAN5400-FA25/international-students-assistant"

[tool.hatch.build.targets.wheel]
packages = ["src/international_student_assistant", "rag_chatbot"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "D"]
# E501 line-too-long; D203/D213 conflict with D211/D212 — pick one per pair.
# D205 (1-blank-line) and D400/D401/D415 are stylistic and would force long
# rewrites of existing concise docstrings, so we keep presence-only enforcement.
ignore = ["E501", "D203", "D213", "D205", "D400", "D401", "D415"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "D102", "D103"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
